style/styles.css
@font-face {
    font-family: "Open Sans";
    font-style: normal;
    font-weight: 400;
    src: url(https://fonts.gstatic.com/s/opensans/v36/memvYaGs126MiZpBA-UvWbX2vVnXBbObj2OVTS-mu0SC55I.woff2) format("woff2");
    font-display: swap;
}

@font-face {
    font-family: "Open Sans";
    font-style: normal;
    font-weight: 600;
    src: url(https://fonts.gstatic.com/s/opensans/v36/memvYaGs126MiZpBA-UvWbX2vVnXBbObj2OVTS-mu0SC55I.woff2) format("woff2");
    font-display: swap;
}

@font-face {
    font-family: "Open Sans";
    font-style: normal;
    font-weight: 700;
    src: url(https://fonts.gstatic.com/s/opensans/v36/memvYaGs126MiZpBA-UvWbX2vVnXBbObj2OVTS-mu0SC55I.woff2) format("woff2");
    font-display: swap;
}

@font-face {
    font-family: "Open Sans";
    font-style: normal;
    font-weight: 800;
    src: url(https://fonts.gstatic.com/s/opensans/v36/memvYaGs126MiZpBA-UvWbX2vVnXBbObj2OVTS-mu0SC55I.woff2) format("woff2");
    font-display: swap;
}

:root {
    --primary-color: #006A96;
    --dark-primary-color: #182B49;
    --secondary-color: #F5F0E6;
    --background-color: white;
    --nav-bar-color: #EEEEEE;
    --text-color: black;
    --font: "Open Sans", "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
}

* {
    font-family: var(--font, "Open Sans", "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif);
    margin: 0;
    color: var(--text-color, black)
}

@keyframes gradient-flow {
    0% {
        background-position: 0% 50%;
    }
    50% {
        background-position: 100% 50%;
    }
    100% {
        background-position: 0% 50%;
    }
}

input[type="color"] {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    background-color: transparent;
    width: 2.5rem;
    height: 2.5rem;
    border: none;
    padding: 0;
    margin: 0;
}

input[type="color"]::-webkit-color-swatch {
    border-radius: 50%;
    border: 1px solid var(--text-color, black)
}
input[type="color"]::-moz-color-swatch {
    border-radius: 50%;
    border: 1px solid var(--text-color, black)
}



#light-mode path {
    fill: var(--text-color, #EEEEEE)
}

.theme {
    align-self: flex-start;
    margin: 1rem;
    max-width: 6dvw;
    cursor: pointer;
}

h1 {
    font-weight: 800;
    font-size: 4rem;
    text-align: center;
    background: linear-gradient(120deg, var(--primary-color, #006A96), var(--dark-primary-color, #182B49));
    animation: gradient-flow 5s ease infinite;
    padding: 3rem;
    background-size: 200% 200%;
    color: var(--secondary-color, #F5F0E6);
}

h2 {
    font-weight: 700;
    font-size: 2.5rem;
    padding-bottom: 0.5rem;
}

h3 {
    font-weight: 600;
}

nav {
    position: fixed;
    background-color: var(--nav-bar-color, #EEEEEE);
    height: 100dvh;
    width: 112px;
    box-sizing: border-box;
    padding-top: 1em;
    display: flex;
    flex-direction: column;
    align-items: center;
    z-index: 1;
    flex-wrap: wrap;
    justify-content: space-between;
}

ul {
    list-style: none;
    padding: 1rem 0;
}

nav a {
    color: var(--text-color, black);
    text-decoration: none;
    display: block;
    margin-bottom: 1rem;
    font-size: 1rem;
    max-width: 70%;
    flex-wrap: wrap;
    padding-left: 15%;
}

#theme-picker {
    flex-direction: column;
    justify-content: flex-start;
}


#theme-picker div {
    padding: 1rem;
    font-size: 1rem;
}

#custom-theme {
    position: fixed;
    display: none;
    flex-direction: column;
    background-color: var(--background-color, white);
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
    padding: 1rem;
    width: 30dvw;
    min-width: 15rem;
    border-radius: 8px;
    z-index: 3;
    bottom: 2rem;
    left: 8rem;
}

.custom {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.custom:has( + hr) {
    padding-bottom: 1rem;
}

.custom select {
    background-color: var(--secondary-color, #F5F0E6);
    color: var(--text-color, black);
}

#popup {
    border-radius: 50%;
    background-color: var(--primary-color, #006894);
    display: flex;
    width: 2.5rem;
    height: 2.5rem;
    box-sizing: border-box;
    border: 1px solid var(--text-color, black);
}

.custom span {
    margin: auto;
    padding-top: 1rem;
    cursor: pointer;
}

@media screen and (min-width: 800px) {
    nav a:hover, input[type="reset"]:hover {
        color: #B6B1A9;
        transition: color 0.3s ease-out;
    }
}

@media screen and (max-width: 800px) {
    nav a:active, input[type="reset"]:active {
        color: #B6B1A9;
        transition: color 0.3s ease-out;
    }
}

#menu-icon, #menu-checkbox {
    display: none;
}

main, footer{
    padding-left: 112px;
}

footer > * {
    text-align: center;
    padding: 0.5rem;
}

@media screen and (max-width: 800px) {
    html {
        font-size: 2dvw;
    }

    nav {
        width: 14dvw;
    }

    main, footer{
        padding-left: 14dvw
    }

    #contact-icon {
        width: 3rem;
        height: 1.5rem;
    }
}

@media screen and (max-width: 450px) {
    #menu-icon {
        font-size: 6dvw;
        cursor: pointer;
        display: inline;
        position: fixed;
        z-index: 2;
        margin-left: 2dvw;
    }

    nav {
        width: 10dvw;
        & ul {
            visibility: hidden;
            transform: scaleX(0)
        }
    }

    main, footer{
        padding-left: 10dvw
    }

    #menu-checkbox {
        display: none;
    }

    html {
        font-size: 9px
    }
    #theme-picker hr {
        display: none
    }
    #theme-picker div {
        display: none
    }

    #custom-theme {
        left: 12dvw;
    }
}

#menu-checkbox:checked + label + nav {
    width: 100px;
    box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.5);
    transition: width 0.5s ease, box-shadow 0.5s ease;
}

#menu-checkbox:checked + label + nav ul {
    visibility: visible;
    transform: scaleX(1);
    overflow: hidden;
    transition: transform 0.5s ease;
    text-align: right;
}

/* Will refactor toggle function with JavaScript in next assignment */
#menu_icon:focus {
    font-size: 6dvw;
    cursor: pointer;
    display: inline;
    position: fixed;
    z-index: 2;
    margin-left: 2dvw;
}

#menu_icon:focus + nav {
    width: 10dvw;
    box-shadow: none;
    & ul {
        display: none;
    }
}

section > * {
    padding-left: 2vw;
    padding-right: 2vw;
}

section {
    padding-bottom: 2rem;
}

section:nth-of-type(even) {
    background-color: var(--background-color, white);
}

section:nth-of-type(odd) {
    background-color: var(--secondary-color, #F5F0E6);
    & h2 {
        color: var(--dark-primary-color, #182B49);
    }
}

footer {
    background-color: var(--background-color, white);
}

@media (color-gamut: srgb) {
    section:nth-of-type(odd) {
        background-color: color-mix(in srgb, var(--secondary-color, #F5F0E6) 50%, var(--background-color, white));
        & h2 {
            color: var(--dark-primary-color, #182B49);
        }
    }
}

aside {
    padding-top: 1rem;
}

ol {
    list-style: none;
}

details {
    padding-bottom: 0.5rem;
}

p {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
}

input[type="text"], select, textarea {
    margin-top: 0.5rem;
    font-size: 1rem;
    background-color: var(--secondary-color, #F5F0E6);
}

/* @media (color-gamut: srgb) {
    input[type="text"], select, textarea {
        margin-top: 0.5rem;
        font-size: 1rem;
        background-color: color(srgb 0.98, 0.97, 0.96);
    }
} */

input[type="text"]:focus, select:focus, textarea:focus {
    background-color:  var(--background-color, white);
    outline: none
}

button {
    background-color: var(--primary-color, #006A96);
    color: var(--secondary-color, #F5F0E6);
    border: none;
    padding: 0.8rem 1rem;
    cursor: pointer;
}

@media screen and (min-width: 800px) {
    button:hover {
        background-color: var(--dark-primary-color, #182B49);;
        transition: background-color 0.5s ease-out;
    }
}

@media screen and (max-width: 800px) {
    button:active {
        background-color: var(--dark-primary-color, #182B49);;
        transition: background-color 0.5s ease-out;
    }
}

img, picture, video, textarea {
    max-width: 60dvw;
    height: auto;
}

audio {
    max-width: 60dvw;
}

img {
    display: block;
    margin: auto;
}

figcaption {
    text-align: center;
}

p:has(+ figure, + video, + audio) {
    padding-bottom: 1rem;
}

form {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

input[type="text"] {
    width: 20rem;
    border: none;
    border-bottom: 1.5px solid black;
    margin-bottom: 1.5rem;
}

input[type="text"], textarea {
    padding: 0.4rem 0.5rem
}

button {
    width: 6em
}

output {
    color: #6E6E6E;
    margin-bottom: 1rem;
}

form label::after {
    content: "*";
    margin-left: 0.2rem;
    color: red;
}

.char-count {
    display: flex;
    justify-content: space-between;
}

col {
     background-color: var(--nav-bar-color, #EEEEEE);
}

.no_js {
    display: none;
}

